<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/weight_ui_container_theme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/lbl_create_weight_title"
            style="@style/lbl_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_main_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <LinearLayout
            style="@style/crud_controls_layout_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbltimedisplay"
                style="@style/lblmsglog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblmsglog"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

        </LinearLayout>

        <LinearLayout
            style="@style/crud_controls_layout_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                style="?android:attr/progressBarStyleHorizontal"
                android:visibility="gone"
                android:max="100"
                android:progress="0"
                android:indeterminateBehavior="cycle"
                android:indeterminateTint="@color/colorControlHighlight"
                android:indeterminateTintMode="multiply"
                android:minHeight="20dip"
                android:maxHeight="20dip" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weights_list_title_container"
            style="@style/weights_list_ui_container_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_server_ip_adress"
                style="@style/crudtextboxtheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_server_ip_adress"
                android:inputType="textAutoComplete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <Button
                android:id="@+id/btncreateweight"
                style="@style/curved_edges_buttons_theme"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/btncreateweight"
                android:onClick="@string/btncreateweight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnweightslist"
                style="@style/curved_edges_buttons_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnweightslist"
                android:icon="@drawable/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <Button
                android:id="@+id/btn_sync_local_db_with_server"
                style="@style/curved_edges_buttons_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sync_local_db_with_server"
                android:icon="@drawable/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

        </LinearLayout>

        <ScrollView
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                style="@style/crud_controls_layout_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblmsglog"
                    style="@style/lblmsglog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblmsglog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.1" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>